--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,6 @@ set-option -g pane-border-style            'fg=brightblack'
 set-option -g set-titles                   on
 set-option -g set-titles-string            '#h'
 
-
 #
 # Escape time
 #
@@ -62,7 +61,8 @@ set-option -g renumber-windows on
 
 #
 # Local Settings
-#
+#
 if-shell 'test -r ~/.tmux.conf.local' 'source-file ~/.tmux.conf.local'
 
-set-option -g default-shell "/bin/bash"
+set-option -g default-shell "/home/matsushimen/.pyenv/versions/3.8.2/bin/xonsh"
+set -g default-command "/home/matsushimen/.pyenv/versions/3.8.2/bin/xonsh"
